# MLOPs2_2025_UBA

./: README.md
clase1/: README.md
clase1/Practica/: API_MLOPS2.ipynb
clase2/Practica/: GraphQL.ipynb  GraphQL_REST_API.ipynb  northwind.ipynb
clase2/Practica/python-graphql-docker/: Dockerfile  README.md  app.py  client.py  pyproject.toml  requirements.txt
clase3/Practica/: gRPC_GraphQL_REST.ipynb
clase3/Practica/ml_services_comparison/: docker-compose.yaml
clase3/Practica/ml_services_comparison/client/: client.py  ml_service_pb2.py  ml_service_pb2_grpc.py  pyproject.toml
clase3/Practica/ml_services_comparison/client/proto/: ml_service.proto
clase3/Practica/ml_services_comparison/graphql_service/: Dockerfile  main.py  pyproject.toml
clase3/Practica/ml_services_comparison/grpc_service/: Dockerfile  main.py  pyproject.toml
clase3/Practica/ml_services_comparison/rest_service/: main.py  pyproject.toml
clase7/practica/FL/: Dockerfile  Federated_Learning.ipynb  pyproject.toml  tutorial_federado.py
clase7/practica/IA_security/: IA_security_adversarial_attack.ipynb  heart.csv
