[tool.poetry]
name = "practica"
version = "0.1.0"
description = ""
authors = ["Jaime <jandresraslas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
tensorflow = ">=2.14.0"
tensorflow-federated = ">=0.60.0"
# Versión de numpy ajustada para ser compatible con scipy (dependencia de TFF)
numpy = ">=1.18.5, <1.26.0"
matplotlib = ">=3.7.0, <3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"