[project]
name = "graphql-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaspar Acevedo",email = "acevedo.zain.gaspar@gmail.com"}
]
readme = "README.md"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.200.0"}
scikit-learn = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
